# exa_tim

./: .gitignore  BOM.ods  README.md  exa_tim-cache.lib  exa_tim.bak  exa_tim.ioc  exa_tim.kicad_pcb  exa_tim.kicad_pcb-bak  exa_tim.sch  fp-lib-table  sym-lib-table
PCB/: exa_tim.bak  exa_tim.kicad_pcb  exa_tim.kicad_pcb-bak  exa_tim.lib
PCB/exa_tim.pretty/: Hirose_FH12-24S-0.5SH_1x24-1MP_P0.50mm_Horizontal.kicad_mod  NL5077-LF.kicad_mod  PinHeader_2x05_P1.27mm_Vertical_SMD.kicad_mod  SKHLLFA010.kicad_mod  TL3305.kicad_mod
PCB/packages3d/: TL3305CFxxxxG.step
exa_tim.pretty/: CUI_CSS-0575A-SMT.kicad_mod  Crystal_SMD_TXC_9HT11-2Pin_2.0x1.2mm_HandSoldering.kicad_mod  Hirose_FH12-24S-0.5SH_1x24-1MP_P0.50mm_Horizontal.kicad_mod  LCC100P960X1400X210-31N.kicad_mod  NL5077-LF.kicad_mod  SKHLLFA010.kicad_mod  SKRTLBE010.kicad_mod
firmware/: .cproject  .project  CMakeLists.txt  LICENSE  LICENSE.txt  Makefile  STM32L071.svd  arm-gcc-toolchain.cmake  clang-arm-gcc-toolchain.cmake  exa_tim.ioc  openocd.cfg  stm32_flash.ld
firmware/Drivers/STM32L0xx_HAL_Driver/Inc/: stm32l0xx_hal_rtc.h
firmware/Drivers/STM32L0xx_HAL_Driver/Src/: stm32l0xx_hal_rtc.c  stm32l0xx_hal_uart.c
firmware/Inc/: alarm.h  application.h  button.h  clock.h  config.h  display.h  font.h  logic.h  main.h  power.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
firmware/Middleware/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
firmware/Middleware/u8g2/: u8g2.h  u8g2_d_setup.c  u8x8.h  u8x8_d_ssd1607_200x200.c  u8x8_u16toa.c  u8x8_u8toa.c
firmware/Middleware/utz/: LICENSE  utz.c  utz.h  zones.c  zones.h
firmware/Src/: alarm.c  application.c  button.c  clock.c  config.c  display.c  logic.c  main.c  power.c  startup_stm32l071xx.s  stm32l0xx_hal_msp.c  stm32l0xx_it.c  syscalls.c  system_stm32l0xx.c  time.c  tiny_printf.c
fonts/: keihansoukaishi-numbers-64.bdf  keihansoukaishi-numbers-96.bdf  keihansoukaishi-numbers.fon
packages3d/: CAM-M8C-0.step  CUI_CSS-0575A-SMT.step  SKHLLF.step  SKRTLB.step
pcb/: exa_tim-cache.lib  exa_tim.bak  exa_tim.kicad_pcb  exa_tim.kicad_pcb-bak  exa_tim.sch
pcb/exa_tim.pretty/: BatteryHolder_Keystone_3034_1x20mm.kicad_mod  Crystal_SMD_TXC_9HT11-2Pin_2.0x1.2mm.kicad_mod  L_Coilcraft_LPS4018.kicad_mod  QFN-32-1EP_5x5mm_P0.5mm_EP3.45x3.45mm.kicad_mod
pcb/packages3d/: 9HT11-32.768KDZF-T.STEP
